Add adapter for JavaFX 8